--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,9 @@ dependencies {
     runtimeOnly ("io.jsonwebtoken:jjwt-impl:0.11.2")
     runtimeOnly("io.jsonwebtoken:jjwt-orgjson:0.11.2")
 
+    // redis
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
 	// Lombok (코드 간소화)
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
